move tempDir to build/ and its definition to QuiltMappingsPlugin rename cacheFilesMinecraft minecraftDir and move it to build/ eliminate FileConstants eliminate custom clean task logic revise insertAutoGeneratedMappings/AddProposedMappingsTask outputs and file names revise TargetVersionConsumingTask convension providers